# $Id$

2006-07-17	Konstantin V. Arkhipov

	* meta/: DTD updated, forgotten shortcut to identifier implemented.

2006-07-16	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveTernary.class.php: added.

	* core/Form/Primitive.class.php: ternary() added.

2006-07-15	Konstantin V. Arkhipov

	* core/Form/: pass-by-reference removed from all methods.

	* core/OSQL/, ext/: support for TRUNCATE-query implemented, as
	requested by unnamed hero.

2006-07-14	Konstantin V. Arkhipov

	* core/DB/PostgresDialect.class.php, core/DB/Dialect.class.php,
	core/DB/ImaginaryDialect.class.php, core/DB/MyDialect.class.php,
	core/DB/LiteDialect.class.php: pass-by-reference removed from all
	methods.

	* ext/: synced with dialects and sanitized.

2006-07-13	Konstantin V. Arkhipov

	* main/Flow/CarefulDatabaseRunner.class.php: careful container for
	DB-related commands.

	* main/Flow/CarefulCommand.class.php,
	main/Flow/CommandChain.class.php: support for something like a
	transactions in EditorController implemented, as requested by
	dedmajor.

2006-07-12	Konstantin V. Arkhipov
	
	* core/Form/Form.class.php: markCustom() added, as requested by
	dedmajor.

	* core/Form/Form.class.php: API breakage: getTexturalErrors() ->
	getTextualErrors(); typo spotted by dedmajor.

2006-07-11	Konstantin V. Arkhipov

	* ext/: StaticFactory, Enumeration, Prototyped, FieldTable, Query,
	QueryIdentification and ImaginaryDialect are implemented.

2006-07-08	Konstantin V. Arkhipov

	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: implemented
	finally.

2006-07-07	Konstantin V. Arkhipov

	* core/Form/FormUtils.class.php: null's handling are now optional, as
	requested by nk.

2006-07-01	Konstantin V. Arkhipov

	* ext/: SegmentHandler interface implemented.

2006-06-30	Konstantin V. Arkhipov

	* core/OSQL/SelectField.class.php: now supports any instance of
	DialectString as field.

2006-06-29	Konstantin V. Arkhipov

	* meta/builders/ContainerClassBuilder.class.php: naming of